fix(ui): adjust canvas section padding and header spacing

--- a/src/features/canvas/SchemaCanvas.module.scss
+++ b/src/features/canvas/SchemaCanvas.module.scss
@@ -2,6 +2,11 @@
 
 .canvasCard {
   min-height: 100%;
+  padding: 0.24rem 0.22rem 0.12rem;
+}
+
+.canvasCard > header {
+  padding-inline: 0.18rem;
 }
 
 .quickStart {
